# event-management-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
event_app/: forms.py  models.py  urls.py  views.py
event_management_system/: settings.py  urls.py
templates/event_app/: base.html  category_detail.html  category_list.html  event_confirm_delete.html  event_detail.html  event_form.html  event_list.html  generic_form.html  organizer_dashboard.html  participant_detail.html  participant_list.html
